metasploit-framework (4.11.7-0kali1) kali-dev; urgency=medium

  * Import new upstream release 

 -- Sophie Brun <sophie@freexian.com>  Fri, 22 Jan 2016 10:28:06 +0100

metasploit-framework (4.11.5-2016010401-0kali1) kali-dev; urgency=medium

  * Import new upstream release

 -- Sophie Brun <sophie@freexian.com>  Thu, 07 Jan 2016 14:53:33 +0100

metasploit-framework (4.11.5-2015121501-0kali1) kali-dev; urgency=medium

  * Import new upstream release

 -- Sophie Brun <sophie@freexian.com>  Fri, 18 Dec 2015 14:22:53 +0100

metasploit-framework (4.11.5-2015120901-0kali1) kali-dev; urgency=medium

  * Import new upstream release

 -- Sophie Brun <sophie@freexian.com>  Fri, 11 Dec 2015 12:14:39 +0100

metasploit-framework (4.11.5-2015113001-0kali1) kali-dev; urgency=medium

  * Import new upstream release

 -- Sophie Brun <sophie@freexian.com>  Thu, 03 Dec 2015 15:54:38 +0100

metasploit-framework (4.11.5-2015111801-0kali1) kali-dev; urgency=medium

  * Import new upstream release 
  * Update debian/copyright

 -- Sophie Brun <sophie@freexian.com>  Mon, 30 Nov 2015 09:33:21 +0100

metasploit-framework (4.11.5-2015110801-0kali1) sana; urgency=medium

  * Import new upstream release

 -- Sophie Brun <sophie@freexian.com>  Tue, 17 Nov 2015 11:56:20 +0100

metasploit-framework (4.11.5-2015103001-0kali1) sana; urgency=medium

  * Import new upstream release

 -- Sophie Brun <sophie@freexian.com>  Thu, 05 Nov 2015 10:09:51 +0100

metasploit-framework (4.11.4-2015102801-0kali1) sana; urgency=medium

  * Import new upstream release 

 -- Sophie Brun <sophie@freexian.com>  Mon, 02 Nov 2015 15:14:06 +0100

metasploit-framework (4.11.4-2015102101-0kali1) sana; urgency=medium

  * Import new upstream release

 -- Sophie Brun <sophie@freexian.com>  Thu, 22 Oct 2015 16:28:06 +0200

metasploit-framework (4.11.4-2015101401-0kali1) sana; urgency=medium

  * Import new upstream release

 -- Sophie Brun <sophie@freexian.com>  Fri, 16 Oct 2015 10:35:44 +0200
