@@ -1,6 +1,7 @@
 metasploit-framework (4.11.7-0kali1) kali-dev; urgency=medium
 
   * Import new upstream release 
+  * Refresh patch
 
  -- Sophie Brun <sophie@freexian.com>  Fri, 22 Jan 2016 10:28:06 +0100
 
